<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_nav"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home"/>

    <item
        android:id="@+id/school_nav"
        android:icon="@drawable/ic_face_black_24dp"
        android:title="@string/feed"/>
    <item
        android:id="@+id/notif_nav"
        app:showAsAction="always"
        android:actionLayout="@layout/notification_badge"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/notifications"/>

    <item
        android:id="@+id/inbox"
        android:icon="@drawable/ic_mail_outline_black_24dp"
        android:title="@string/inbox"/>



</menu>