<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="15dp"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Profile">
    <RelativeLayout
        android:background="@drawable/bubble"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:id="@+id/profile_image1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_freepik"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/name"
            android:layout_below="@+id/profile_image1"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/user"
                android:layout_marginTop="20dp"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:text="khalil snoussi"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/local"
            android:layout_below="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="New York, USA"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/follow_numbers"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/local"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/white"
                    android:id="@+id/followers_text"
                    android:text="450K"
                    android:textSize="17sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_below="@+id/followers_text"
                    android:textColor="@color/white"
                    android:id="@+id/followers_text_1"
                    android:text="@string/followers"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>
            <RelativeLayout
                android:layout_marginLeft="50dp"
                android:layout_toRightOf="@+id/followers"
                android:id="@+id/following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/white"
                    android:id="@+id/following_text"
                    android:text="20K"
                    android:textSize="17sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_below="@+id/following_text"
                    android:textColor="@color/white"
                    android:id="@+id/following_text_1"
                    android:text="@string/following"
                    android:textSize="17sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>
            <RelativeLayout
                android:layout_marginLeft="50dp"
                android:layout_toRightOf="@+id/following"
                android:id="@+id/helped"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/white"
                    android:id="@+id/helped_text"
                    android:text="20K"
                    android:textSize="17sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_below="@+id/helped_text"
                    android:textColor="@color/white"
                    android:id="@+id/helped_text_1"
                    android:text="@string/helped"
                    android:textSize="17sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

        </RelativeLayout>
        <RelativeLayout
            android:layout_below="@+id/follow_numbers"
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_marginLeft="70dp"
                android:id="@+id/follow_button"
                android:text="@string/follow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/follow_button"
                android:text="@string/message"
                android:id="@+id/send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/profile_header"
        android:paddingStart="15dp"
        android:paddingTop="15dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>







</LinearLayout>